<resources>
    <string name="app_name">Bubble Navigation</string>
    <string name="products">Products</string>
    <string name="inventarisation">Inventarisations</string>
    <string name="archive">Archive</string>
    <string name="fake">Fake</string>
    <string name="mock">Mock</string>
    <string name="happy">Happy</string>
    <string name="room">Room</string>
    <string name="restaurant">Food</string>
    <string name="shop">Shop</string>
    <string name="photos">Pics</string>
    <string name="call">Call</string>
    <string name="stores">Stores</string>
    <string name="shop_name_1">Shop name 1</string>
</resources>
