<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomBarActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.jewell.MainActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </RelativeLayout>

<!--    <androidx.viewpager.widget.ViewPager-->
<!--        android:id="@+id/view_pager"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view_linear"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->
    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:text="Whooho"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"/>

    <com.example.jewell.general_view.BubbleNavigationLinearView
        android:id="@+id/bottom_navigation_view_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.example.jewell.general_view.BubbleToggleView
            android:id="@+id/l_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/red_inactive"
            app:bt_icon="@drawable/ic_home"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/products" />

        <com.example.jewell.general_view.BubbleToggleView
            android:id="@+id/l_item_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_badgeBackgroundColor="@color/green_active"
            app:bt_colorActive="@color/blue_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_icon="@drawable/ic_search"
            app:bt_shape="@drawable/transition_background_drawable_search"
            app:bt_title="@string/inventarisation" />

        <com.example.jewell.general_view.BubbleToggleView
            android:id="@+id/l_item_profile_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/blue_grey_active"
            app:bt_colorInactive="@color/blue_grey_inactive"
            app:bt_icon="@drawable/ic_like"
            app:bt_shape="@drawable/transition_background_drawable_like"
            app:bt_title="@string/archive" />

        <com.example.jewell.general_view.BubbleToggleView
            android:id="@+id/l_item_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/ic_playlist"
            app:bt_shape="@drawable/transition_background_drawable_list"
            app:bt_title="@string/fake" />

        <com.example.jewell.general_view.BubbleToggleView
            android:id="@+id/l_item_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/purple_active"
            app:bt_colorInactive="@color/purple_inactive"
            app:bt_icon="@drawable/ic_person"
            app:bt_shape="@drawable/transition_background_drawable_person"
            app:bt_title="@string/mock" />
    </com.example.jewell.general_view.BubbleNavigationLinearView>

</androidx.constraintlayout.widget.ConstraintLayout>